--- a/frontend/src/Components/SideContent/SideContentBody.module.css
+++ b/frontend/src/Components/SideContent/SideContentBody.module.css
@@ -1,6 +1,5 @@
 .sideContentBody {
-    padding: 32px;
-    width: 100%;
-    background-color: var(--background-color);
-    height: calc(100vh - 202px);
+  background-color: var(--background-color);
+  height: 100%;
+  padding: 18px;
 }
