--- a/frontend/src/Components/ReportCard/ReportCard.module.css
+++ b/frontend/src/Components/ReportCard/ReportCard.module.css
@@ -1,20 +1,62 @@
+.reportCard {
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  background-color: white;
+  position: relative;
+  padding: 10px;
+  margin-bottom: 15px;
+  z-index: 1;
+}
 
+.reportCard::before {
+  content: "";
+  position: absolute;
+  transition: all 300ms ease-in-out;
+  top: 0;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  top: 0;
+  opacity: 0;
+  background-color: var(--main-color);
+}
 
-.reportCardDetails{
-    display: flex;
-    flex-direction: column;
-    width: 240px;
-    margin-left: 20px;
-    justify-content: space-between;
+.reportCard:hover:before {
+  transition: all 300ms ease-in-out;
+  left: 0;
+  right: 0;
+  opacity: 1;
+  z-index: -1;
+}
 
+.reportCard:hover .reportCardDetails {
+  color: white;
+  transition: all 300ms ease-in-out;
+}
+
+.reportCardActive {
+  background-color: var(--main-color);
+}
+
+.reportCard.reportCardActive .reportCardDetails,
+.reportCard.reportCardActive .reportCardStatusType {
+  color: white;
+}
+
+.reportCardDetails {
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  margin-left: 20px;
+  justify-content: space-between;
+  z-index: 1000;
+  color: black;
 }
 
 .reportCardStatusType {
   color: red;
   font-weight: bold;
   font-size: 1rem;
-}
-
-.reportCardStatus {
-
+  margin-left: 5px;
 }
