--- a/frontend/src/Components/ReportCard/ReportCardImage.module.css
+++ b/frontend/src/Components/ReportCard/ReportCardImage.module.css
@@ -1,9 +1,10 @@
 .reportCardImage {
     background-image: url('./rower.jpg');
     background-size: cover;
-    height: 160px;
-    width: 220px;
+    height: 120px;
+    width: 190px;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    z-index: 5;
 }
