--- a/frontend/src/Components/SideContent/SideContentHeader.module.css
+++ b/frontend/src/Components/SideContent/SideContentHeader.module.css
@@ -1,9 +1,14 @@
 .sideContentHeader {
-  width: 100%;
-  height: 120px;
+  height: 190px;
   background-color: white;
   padding: 32px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-    border-radius: 0 8px 8px 0;
+  border-radius: 0 8px 8px 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.sideContentHeaderExpand {
+  height: 340px;
+  transition: all 0.3s ease-in-out;
 }
