--- a/frontend/src/Components/SideContentReports/SideContentReports.module.css
+++ b/frontend/src/Components/SideContentReports/SideContentReports.module.css
@@ -1,11 +1,23 @@
 .controls {
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
 }
 
 .sideContentReports {
-    width: 550px;
-    margin: 0;
+  position: absolute;
+  width: 520px;
+  left: -550px;
+  height: 100vh;
+  margin: 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    z-index: 100;
+    right: 500px;
+    transition: all 0.5s ease-in-out;
 }
 
+.sideContentReports.active{
+  left: 0;
+  transition: all 0.5s ease-in-out;
+}
