--- a/frontend/src/Pages/Home.module.css
+++ b/frontend/src/Pages/Home.module.css
@@ -2,12 +2,11 @@
   width: 100vw;
   height: 100vh;
   position: relative;
-  
 }
 
 .content {
   position: relative;
   left: 84px;
-  width: calc(100% - 84px);
+  width: calc(100vw - 84px);
   height: 100vh;
 }
