--- a/frontend/src/Components/SideContent/SideContentBody.module.css
+++ b/frontend/src/Components/SideContent/SideContentBody.module.css
@@ -1,6 +1,10 @@
 .sideContentBody {
+  position: relative;
   background-color: var(--background-color);
   height: 100%;
   padding: 18px;
   overflow-y: auto;
+  display: flex;
+  flex-flow: column;
+  flex: 0 1 auto;
 }
