--- a/frontend/src/Components/SideContent/SideContentHeader.module.css
+++ b/frontend/src/Components/SideContent/SideContentHeader.module.css
@@ -6,6 +6,7 @@
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   border-radius: 0 8px 8px 0;
   transition: all 0.3s ease-in-out;
+  overflow: hidden;
 }
 
 .sideContentHeaderExpand {
