--- a/frontend/src/Components/SideContentDetails/DetailsImage.module.css
+++ b/frontend/src/Components/SideContentDetails/DetailsImage.module.css
@@ -3,11 +3,13 @@
   height: 240px;
   position: relative;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .detailsImage img {
   width: 100%;
-  object-fit: fill;
+  height: 240px;
+  object-fit: cover;
   margin: 0;
   position: absolute;
   top: 0;
